--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,9 @@ set(CMAKE_CUDA_STANDARD 17)
 enable_language(CXX CUDA)
 
 
-add_executable(frecuencias main.cpp)
+#add_executable(frecuencias main.cpp kernel.cu)
+add_executable(frecuencias main_histograma.cpp kernel_histograma.cu)
+
 target_include_directories(untitled PUBLIC
         ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
 
