--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,9 @@ enable_language(CXX CUDA)
 
 
 #add_executable(frecuencias main.cpp kernel.cu)
-add_executable(frecuencias main_histograma.cpp kernel_histograma.cu)
+#add_executable(frecuencias main_histograma.cpp kernel_histograma.cu)
+add_executable(frecuencias main_prodint.cpp kernel_prodint.cu)
+
 
 target_include_directories(untitled PUBLIC
         ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
